more image path updates, implementing data folder

--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,15 @@
 ---
 layout: 'base.html'
-canonical: 'Official link for that page (https://www.site.com)'
 description: 'Meta description for the page'
 metaTitle: 'Title that shows up on google searches'
-tagTitle: 'Company Name | What They Do | Town and State'
+tagTitle: 'Pixel Perfect Websites'
+preloadImg: 'landing-1920w.webp'
+preloadCSS: 'local.css'
 permalink: '/'
 eleventyNavigation:
   key: Home
   order: 100
 ---
-
-<!-- 
-This is to pre load any image above the fold, like hero section backgrounds.
-If you do not have any images in your hero section that you need to preload, remove this 
-block
--->
-
-{% block preload %}
-  <link rel="preload" as="image" href="/assets/images/landing.jpg"/>
-{% endblock %}
-{% block pageCSS %}
-  <link rel="stylesheet" href="/css/critical.css"/>
-  <link rel="stylesheet" href="/css/local.css"/>
-
-  <!--Defer loading the whole page css-->
-  <link rel="stylesheet" href="/css/local.css" media="print" onload="this.media='all'; this.onload=null;"/>
-{% endblock %}
-
 <!-- Enter html code below -->
 
 <!-- ============================================ -->
@@ -34,17 +17,17 @@ block
 <!-- ============================================ -->
 
 <section id="hero">
-  <div class="cs-container">
-    <div class="cs-flex-group">
-      <span class="cs-topper">mountain hiking society</span>
-      <h1 class="cs-title">Explore the World with Exciting People</h1>
-      <p class="cs-text">
+    <div class="cs-container">
+        <div class="cs-flex-group">
+            <span class="cs-topper">mountain hiking society</span>
+            <h1 class="cs-title">Explore the World with Exciting People</h1>
+            <p class="cs-text">
         Tincidunt lobortis feugiat vivamus at augue eget arcu dictum varius. Nibh tortor id aliquet lectus proin nibh
         condimentum.
       </p>
-      <a href="" class="cs-button-solid">Explore More</a>
-      <a href="" class="cs-button-transparent">
-        <img
+            <a href="" class="cs-button-solid">Explore More</a>
+            <a href="" class="cs-button-transparent">
+                <img
           class="cs-img"
           loading="lazy"
           decoding="async"
@@ -55,11 +38,11 @@ block
 />
         Learn More
       </a>
+        </div>
     </div>
-  </div>
 
-  <!-- Background Image -->
-  {% image './src/images/landing.jpg', 'mountains', 'cs-picture', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 2000px'%}
+    <!-- Background Image -->
+    {% image '/images/landing.jpg', 'mountains', 'cs-picture', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 2000px'%}
 </section>
 
 <!-- ============================================ -->
@@ -67,49 +50,49 @@ block
 <!-- ============================================ -->
 
 <section id="services" class="services">
-  <!-- Get Icons From flaticon.com -->
-  <div class="card">
-    <picture>
-      <img
+    <!-- Get Icons From flaticon.com -->
+    <div class="card">
+        <picture>
+            <img
         aria-hidden="true"
         decoding="async"
-        src="assets/images/service1.svg"
+        src="/assets/svgs/service1.svg"
         alt="appliance"
         width="48"
         height="48"
 />
-    </picture>
-    <h2>Service 1</h2>
-    <p>Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.</p>
-  </div>
-  <div class="card">
-    <picture>
-      <img
+        </picture>
+        <h2>Service 1</h2>
+        <p>Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.</p>
+    </div>
+    <div class="card">
+        <picture>
+            <img
         aria-hidden="true"
         decoding="async"
-        src="assets/images/service2.svg"
+        src="/assets/svgs/service2.svg"
         alt="appliance"
         width="48"
         height="48"
 />
-    </picture>
-    <h2>Service 2</h2>
-    <p>Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.</p>
-  </div>
-  <div class="card">
-    <picture>
-      <img
+        </picture>
+        <h2>Service 2</h2>
+        <p>Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.</p>
+    </div>
+    <div class="card">
+        <picture>
+            <img
         aria-hidden="true"
         decoding="async"
-        src="assets/images/service3.svg"
+        src="/assets/svgs/service3.svg"
         alt="appliance"
         width="48"
         height="48"
 />
-    </picture>
-    <h2>Service 3</h2>
-    <p>Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.</p>
-  </div>
+        </picture>
+        <h2>Service 3</h2>
+        <p>Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.</p>
+    </div>
 </section>
 
 <!-- ============================================ -->
@@ -117,34 +100,34 @@ block
 <!-- ============================================ -->
 
 <section id="sbs">
-  <div class="cs-container">
-    <!-- Left Image Section -->
-    <div class="cs-left">
-      {% image './src/images/cabinets2.jpg', 'house', 'cs-picture cs-picture1', 'lazy'%}
-      {% image './src/images/construction.jpg', 'house', 'cs-picture cs-picture2', 'lazy'%}
-    </div>
-    <!-- Right Content Section-->
-    <div class="cs-right">
-      <span class="cs-topper">About Us</span>
-      <h2 class="cs-title">About Company Title</h2>
-      <p class="cs-text">
+    <div class="cs-container">
+        <!-- Left Image Section -->
+        <div class="cs-left">
+            {% image '/images/cabinets2.jpg', 'house', 'cs-picture cs-picture1', 'lazy'%}
+            {% image '/images/construction.jpg', 'house', 'cs-picture cs-picture2', 'lazy'%}
+        </div>
+        <!-- Right Content Section-->
+        <div class="cs-right">
+            <span class="cs-topper">About Us</span>
+            <h2 class="cs-title">About Company Title</h2>
+            <p class="cs-text">
         In consequat tincidunt turpis sit amet imperdiet. Praesent Class officelan nonatoureanor mauris laoreet, iaculis
         libero quis. Curabitur et tempus eri consequat tincidunt turpis sit amet imperdiet. Praesent nonatourean olei
         aptent taciti sociosqu ad litora torquent per.
       </p>
-      <p class="cs-text">
+            <p class="cs-text">
         In consequat tincidunt turpis sit amet imperdiet. Praesent Class officelan nonatoureanor mauris laoreet, iaculis
         libero quis. Curabitur et tempus eri consequat tincidunt turpis sit amet imperdiet. Praesent nonatourean olei
         aptent taciti sociosqu ad litora torquent per.
       </p>
-      <div class="cs-flex-group">
-        <p class="cs-flex-p">
+            <div class="cs-flex-group">
+                <p class="cs-flex-p">
           In consequat tincidunt turpis sit amet imperdiet. Praesent Classei consequat tincidunt turpis sit amet
           imperdiet for mind.
         </p>
-        <span class="cs-name">Justin Time</span>
-        <span class="cs-job">CEO-Founder</span>
-        <img
+                <span class="cs-name">Justin Time</span>
+                <span class="cs-job">CEO-Founder</span>
+                <img
           class="cs-quote-icon"
           loading="lazy"
           decoding="async"
@@ -153,10 +136,10 @@ block
           width="136"
           height="77"
 />
-      </div>
-      <a href="/about" class="button-solid">More About Us</a>
+            </div>
+            <a href="/about" class="button-solid">More About Us</a>
+        </div>
     </div>
-  </div>
 </section>
 
 <!-- ============================================ -->
@@ -164,31 +147,31 @@ block
 <!-- ============================================ -->
 
 <section id="sbs-r">
-  <div class="cs-container">
-    <!-- Left Image Section -->
-    <div class="cs-left">
-      {% image './src/images/construction.jpg', 'house', 'cs-picture cs-picture1', 'lazy'%}
-      {% image './src/images/cabinets2.jpg', 'house', 'cs-picture cs-picture2', 'lazy'%}
-    </div>
-    <!-- Right Content Section-->
-    <div class="cs-right">
-      <span class="cs-topper">SEO Ranking</span>
-      <h2 class="cs-title">Talk about a main service keyword</h2>
-      <p class="cs-text">
+    <div class="cs-container">
+        <!-- Left Image Section -->
+        <div class="cs-left">
+            {% image '/images/construction.jpg', 'house', 'cs-picture cs-picture1', 'lazy'%}
+            {% image '/images/cabinets2.jpg', 'house', 'cs-picture cs-picture2', 'lazy'%}
+        </div>
+        <!-- Right Content Section-->
+        <div class="cs-right">
+            <span class="cs-topper">SEO Ranking</span>
+            <h2 class="cs-title">Talk about a main service keyword</h2>
+            <p class="cs-text">
         In consequat tincidunt turpis sit amet imperdiet. Praesent Class officelan nonatoureanor mauris laoreet, iaculis
         libero quis. Curabitur et tempus eri consequat tincidunt turpis sit amet imperdiet. Praesent nonatourean olei
         aptent taciti sociosqu ad litora torquent per.
       </p>
-      <p class="cs-text">
+            <p class="cs-text">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non tenetur, iure nihil ipsam qui atque commodi id
         voluptatem nesciunt, quis animi fuga cum doloribus! Eaque laboriosam, unde consectetur iure asperiores ullam.
         Consequuntur debitis a voluptatibus vitae optio autem explicabo quia neque est quas, in placeat. Lorem ipsum
         dolor sit amet consectetur adipisicing elit. Doloribus modi laudantium voluptatibus rem libero error minus quia
         eligendi sapiente eos.
       </p>
-      <a href="" class="button-solid">Learn More About Thing</a>
+            <a href="" class="button-solid">Learn More About Thing</a>
+        </div>
     </div>
-  </div>
 </section>
 
 <!-- ============================================ -->
@@ -196,35 +179,35 @@ block
 <!-- ============================================ -->
 
 <section id="gallery">
-  <div class="cs-container">
-    <span class="cs-topper">Our Portfolio</span>
-    <h2 class="cs-title">Et orci volutpat, back up generator installations</h2>
-    <div class="cs-image-group">
-      <!-- Row 1-->
-      <div class="cs-row cs-row-1">
-        {% image './src/images/portfolio/port1.jpg', 'new hallway', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        {% image './src/images/portfolio/port4.jpg', 'new home construction', 'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        {% image './src/images/portfolio/port7.jpg', 'building a new wall', 'cs-picture cs-picture-3', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        <!-- To add more images, copy and paste this row's picture tags here in order from cs-picture-1 to cs-picture-3 and they will maintain the same layout-->
-      </div>
-      <!-- Row 2 -->
-      <div class="cs-row cs-row-2">
-        {% image './src/images/portfolio/port2.jpg', 'new kitchen', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        {% image './src/images/portfolio/port5.jpg', 'apartment addition', 'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        {% image './src/images/portfolio/port8.jpg', 'kew kitchen cabinets', 'cs-picture cs-picture-3', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        <!-- To add more images, copy and paste this row's picture tags here in order from cs-picture-1 to cs-picture-3 and they will maintain the same layout-->
-      </div>
-      <!-- Row 3 -->
-      <div class="cs-row cs-row-3">
-        {% image './src/images/portfolio/port3.jpg', 'new kitchen', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        {% image './src/images/portfolio/port6.jpg', 'apartment addition', 'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        {% image './src/images/portfolio/port9.jpg', 'kew kitchen cabinets', 'cs-picture cs-picture-3', 'lazy', '(max-width: 600px) 200px, 400px'%}
+    <div class="cs-container">
+        <span class="cs-topper">Our Portfolio</span>
+        <h2 class="cs-title">Et orci volutpat, back up generator installations</h2>
+        <div class="cs-image-group">
+            <!-- Row 1-->
+            <div class="cs-row cs-row-1">
+                {% image '/images/portfolio/port1.jpg', 'new hallway', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%}
+                {% image '/images/portfolio/port4.jpg', 'new home construction', 'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
+                {% image '/images/portfolio/port7.jpg', 'building a new wall', 'cs-picture cs-picture-3', 'lazy', '(max-width: 600px) 200px, 400px'%}
+                <!-- To add more images, copy and paste this row's picture tags here in order from cs-picture-1 to cs-picture-3 and they will maintain the same layout-->
+            </div>
+            <!-- Row 2 -->
+            <div class="cs-row cs-row-2">
+                {% image '/images/portfolio/port2.jpg', 'new kitchen', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%}
+                {% image '/images/portfolio/port5.jpg', 'apartment addition', 'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
+                {% image '/images/portfolio/port8.jpg', 'kew kitchen cabinets', 'cs-picture cs-picture-3', 'lazy', '(max-width: 600px) 200px, 400px'%}
+                <!-- To add more images, copy and paste this row's picture tags here in order from cs-picture-1 to cs-picture-3 and they will maintain the same layout-->
+            </div>
+            <!-- Row 3 -->
+            <div class="cs-row cs-row-3">
+                {% image '/images/portfolio/port3.jpg', 'new kitchen', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%}
+                {% image '/images/portfolio/port6.jpg', 'apartment addition', 'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
+                {% image '/images/portfolio/port9.jpg', 'kew kitchen cabinets', 'cs-picture cs-picture-3', 'lazy', '(max-width: 600px) 200px, 400px'%}
 
-        <!-- To add more images, copy and paste this row's picture tags here in order from cs-picture-1 to cs-picture-3 and they will maintain the same layout-->
-      </div>
+                <!-- To add more images, copy and paste this row's picture tags here in order from cs-picture-1 to cs-picture-3 and they will maintain the same layout-->
+            </div>
+        </div>
+        <a href="/projects" class="button-solid">View Full Gallery</a>
     </div>
-    <a href="/projects" class="button-solid">View Full Gallery</a>
-  </div>
 </section>
 
 <!-- ============================================ -->
@@ -232,18 +215,18 @@ block
 <!-- ============================================ -->
 
 <section id="reviews">
-  <div class="cs-container">
-    <span class="cs-topper">Our Reviews</span>
-    <h2 class="cs-title">Words From Our Customers</h2>
-    <p class="cs-text">
+    <div class="cs-container">
+        <span class="cs-topper">Our Reviews</span>
+        <h2 class="cs-title">Words From Our Customers</h2>
+        <p class="cs-text">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit dolor volutpat porttitor sagittis nunc nisl. Sagittis
       sit pellentesque gravida viverra. Leo ut sed euismod tortor risus et. Ornare non neque, leo, ornare. Lorem ipsum
       dolor sit amet.
     </p>
-    <ul class="cs-card-group">
-      <!-- Review 1 -->
-      <li class="cs-item">
-        <img
+        <ul class="cs-card-group">
+            <!-- Review 1 -->
+            <li class="cs-item">
+                <img
           class="cs-item-img"
           aria-hidden="true"
           loading="lazy"
@@ -253,16 +236,16 @@ block
           width="80"
           height="80"
 />
-        <p class="cs-item-p">
+                <p class="cs-item-p">
           Dictum dolor, nullam morbi sem in auctor proin. Consequat dolor habitasse nam sed tempor. Viverra magna
           pharetra rhoncus, nec sed ullamcorper lectus et. Auctor velit diam fermentum consequat. Feugiat viverra massa
           urna, volutpat orci imperdiet eget eget.
         </p>
-        <span class="cs-reviewer">
+                <span class="cs-reviewer">
           Jon Doe
           <span class="cs-desc">Homeowner</span>
-        </span>
-        <img
+                </span>
+                <img
           class="cs-item-stars"
           aria-hidden="true"
           loading="lazy"
@@ -272,10 +255,10 @@ block
           width="96"
           height="16"
 />
-      </li>
-      <!-- Review 2 -->
-      <li class="cs-item">
-        <img
+            </li>
+            <!-- Review 2 -->
+            <li class="cs-item">
+                <img
           class="cs-item-img"
           aria-hidden="true"
           loading="lazy"
@@ -285,16 +268,16 @@ block
           width="80"
           height="80"
 />
-        <p class="cs-item-p">
+                <p class="cs-item-p">
           Dictum dolor, nullam morbi sem in auctor proin. Consequat dolor habitasse nam sed tempor. Viverra magna
           pharetra rhoncus, nec sed ullamcorper lectus et. Auctor velit diam fermentum consequat. Feugiat viverra massa
           urna, volutpat orci imperdiet eget eget.
         </p>
-        <span class="cs-reviewer">
+                <span class="cs-reviewer">
           Jane Doe
           <span class="cs-desc">Homeowner</span>
-        </span>
-        <img
+                </span>
+                <img
           class="cs-item-stars"
           aria-hidden="true"
           loading="lazy"
@@ -304,43 +287,43 @@ block
           width="96"
           height="16"
 />
-      </li>
-    </ul>
-    <a aria-label="read more reviews" href="/reviews" class="button-solid">Read More</a>
-  </div>
+            </li>
+        </ul>
+        <a aria-label="read more reviews" href="/reviews" class="button-solid">Read More</a>
+    </div>
 </section>
 <!-- ============================================ -->
 <!--             Final Call to Action             -->
 <!-- ============================================ -->
 
 <section id="cta">
-  <div class="container">
-    <h2 class="title">
+    <div class="container">
+        <h2 class="title">
       Get It Done <br/>
       With Us Today
     </h2>
-    <p>
+        <p>
       Say something catchy, informative, and encouraging to click the button to go to the contact page. I like to add
       these to the bottom of all pages.
     </p>
-    <a href="/contact" class="button-solid">Get an Estimate Now</a>
-  </div>
-  {% image './src/images/cabinets2.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 2000px'%}
+        <a href="/contact" class="button-solid">Get an Estimate Now</a>
+    </div>
+    {% image '/images/cabinets2.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 <script>
-  if (window.netlifyIdentity) {
-    window
-      .netlifyIdentity
-      .on('init', (user) => {
-        if (!user) {
-          window
+    if (window.netlifyIdentity) {
+        window
             .netlifyIdentity
-            .on('login', () => {
-              document.location.href = '/admin/';
+            .on('init', (user) => {
+                if (!user) {
+                    window
+                        .netlifyIdentity
+                        .on('login', () => {
+                            document.location.href = '/admin/';
+                        });
+                }
             });
-        }
-      });
-  }
+    }
 </script>
