--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -2,7 +2,7 @@
 layout: 'base.html'
 description: 'Meta description for the page'
 meta-title: 'Title that shows up on google searches'
-tagTitle: 'Company Name | What They Do | Town and State'
+tagTitle: 'Blog'
 permalink: 'blog/'
 eleventyNavigation:
     key: Blog
@@ -10,11 +10,11 @@ eleventyNavigation:
 ---
 
 {% block preload %}
-<link rel="preload" as="image" href="/assets/images/cabinets2-m.jpg">
+  <link rel="preload" as="image" href="/images/cabinets2-m.jpg">
 {% endblock %}
 
 {% block pageCSS %}
-<link rel="stylesheet" href="/css/blog.css">
+  <link rel="stylesheet" href="/css/blog.css">
 {% endblock %}
 
 <!-- Enter html code below -->
@@ -25,9 +25,9 @@ eleventyNavigation:
 <section id="int-hero">
   <h1 id="home-h">Blog</h1>
   <picture>
-      <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-      <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-      <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="cabinets" width="400" height="662">
+    <source media="(max-width: 600px)" srcset="/images/cabinets2-m.jpg">
+    <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
+    <img aria-hidden="true" decoding="async" src="/images/cabinets2.jpg" alt="cabinets" width="400" height="662">
   </picture>
 </section>
 
@@ -42,48 +42,48 @@ eleventyNavigation:
     <!--                 Blog Articles                -->
     <!-- ============================================ -->
 
-    {% if collections.post |length == 0 %}
-    <h1>No Recent Posts</h1>
+    {% if collections.post | length == 0 %}
+      <h1>No Recent Posts</h1>
     {% endif %}
     {%- for post in collections.post | reverse -%}
-    <article class="recent-articles">
-      <!--Main Article Image-->
-      <picture class="blog-mainImage">
-        <img
+      <article class="recent-articles">
+        <!--Main Article Image-->
+        <picture class="blog-mainImage">
+          <img
           src="{{ post.data.image }}"
           alt="{{ post.data.imageAlt }}"
           width="795"
           height="400"
           decoding="async"
-        />
-      </picture>
-      <!--Article Info-->
-      <div class="article-group">
-        <div class="blog-authorGroup">
-          <!--Author Image-->
-          <picture class="blog-author-img">
-            <img
+/>
+        </picture>
+        <!--Article Info-->
+        <div class="article-group">
+          <div class="blog-authorGroup">
+            <!--Author Image-->
+            <picture class="blog-author-img">
+              <img
               src="/assets/images/profile.svg"
               alt="house"
               width="32"
               height="32"
               decoding="async"
-            />
-          </picture>
-          <span class="blog-author">{{ post.data.author }}</span>
-          <span aria-hidden="true" class="blog-dot"></span>
-          <!--Blog Date-->
-          <span class="blog-date">{{ post.date | postDate }}</span>
+/>
+            </picture>
+            <span class="blog-author">{{ post.data.author }}</span>
+            <span aria-hidden="true" class="blog-dot"></span>
+            <!--Blog Date-->
+            <span class="blog-date">{{ post.date | postDate }}</span>
+          </div>
+          <h2 class="blog-h1">
+            {{ post.data.blogTitle }}
+          </h2>
+          <p class="blog-desc">
+            {{ post.data.blogDescription }}
+          </p>
+          <a href="{{ post.url }}" class="blog-link">Continue Reading</a>
         </div>
-        <h2 class="blog-h1">
-          {{ post.data.blogTitle }}
-        </h2>
-        <p class="blog-desc">
-          {{ post.data.blogDescription }}
-        </p>
-        <a href="{{ post.url }}" class="blog-link">Continue Reading</a>
-      </div>
-    </article>
+      </article>
     {%- endfor -%}
   </div>
 
@@ -93,4 +93,3 @@ eleventyNavigation:
 
   {% include 'featured-post.html' %}
 </div>
-
