--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -2,21 +2,14 @@
 layout: 'base.html'
 description: 'Meta description for the page'
 metaTitle: 'Title that shows up on OG social Media Title Tag'
-tagTitle: 'Company Name | What They Do | Town and State'
+tagTitle: 'Reviews'
+preloadImg: 'cabinets2-1920w.webp'
+preloadCSS: 'reviews.css'
 permalink: 'reviews/'
 eleventyNavigation:
     key: Reviews
     order: 400
 ---
-
-{% block preload %}
-    <link rel="preload" as="image" href="/assets/images/cabinets2-m.jpg">
-{% endblock %}
-
-{% block pageCSS %}
-    <link rel="stylesheet" href="/css/reviews.css">
-{% endblock %}
-
 <!-- Enter html code below -->
 
 <!-- ============================================ -->
@@ -25,7 +18,7 @@ eleventyNavigation:
 
 <section id="int-hero">
     <h1 id="home-h">Our Reviews</h1>
-    {% image './src/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 2000px'%}
+    {% image '/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
@@ -36,7 +29,7 @@ eleventyNavigation:
     <div class="container">
         <div class="review">
             <picture>
-                <img class="profile" loading="lazy" decoding="async" src="/assets/images/profile.svg" alt="" width="99" height="99">
+                <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
             </picture>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
@@ -44,13 +37,13 @@ eleventyNavigation:
             <div class="star-group">
                 <span class="name">B Miller<span class="desc">Homeowner</span></span>
                 <picture>
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/stars.svg" alt="stars" width="91" height="15">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
                 </picture>
             </div>
         </div>
         <div class="review">
             <picture>
-                <img class="profile" loading="lazy" decoding="async" src="/assets/images/profile.svg" alt="" width="99" height="99">
+                <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
             </picture>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
@@ -58,13 +51,13 @@ eleventyNavigation:
             <div class="star-group">
                 <span class="name">Vincent M.<span class="desc">Homeowner</span></span>
                 <picture>
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/stars.svg" alt="stars" width="91" height="15">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
                 </picture>
             </div>
         </div>
         <div class="review">
             <picture>
-                <img class="profile" loading="lazy" decoding="async" src="/assets/images/profile.svg" alt="" width="99" height="99">
+                <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
             </picture>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
@@ -72,13 +65,13 @@ eleventyNavigation:
             <div class="star-group">
                 <span class="name">Alex L.<span class="desc">Homeowner</span></span>
                 <picture>
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/stars.svg" alt="stars" width="91" height="15">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
                 </picture>
             </div>
         </div>
         <div class="review">
             <picture>
-                <img class="profile" loading="lazy" decoding="async" src="/assets/images/profile-woman.svg" alt="" width="99" height="99">
+                <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile-woman.svg" alt="" width="99" height="99">
             </picture>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
@@ -86,13 +79,13 @@ eleventyNavigation:
             <div class="star-group">
                 <span class="name">Arrieana M.<span class="desc">Homeowner</span></span>
                 <picture>
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/stars.svg" alt="stars" width="91" height="15">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
                 </picture>
             </div>
         </div>
         <div class="review">
             <picture>
-                <img class="profile" loading="lazy" decoding="async" src="/assets/images/profile.svg" alt="" width="99" height="99">
+                <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
             </picture>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
@@ -100,13 +93,13 @@ eleventyNavigation:
             <div class="star-group">
                 <span class="name">Leo N.<span class="desc">Homeowner</span></span>
                 <picture>
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/stars.svg" alt="stars" width="91" height="15">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
                 </picture>
             </div>
         </div>
         <div class="review">
             <picture>
-                <img class="profile" loading="lazy" decoding="async" src="/assets/images/profile.svg" alt="" width="99" height="99">
+                <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
             </picture>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
@@ -114,7 +107,7 @@ eleventyNavigation:
             <div class="star-group">
                 <span class="name">Brian A.<span class="desc">Homeowner</span></span>
                 <picture>
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/stars.svg" alt="stars" width="91" height="15">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
                 </picture>
             </div>
         </div>
@@ -133,6 +126,6 @@ eleventyNavigation:
         </p>
         <a href="/contact.html" class="button-solid">Free Estimate</a>
     </div>
-    {% image './src/images/cabinets2.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 2000px'%}
+    {% image '/images/cabinets2.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 
 </section>
